<resources>
    <string name="app_name">Leaf Note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    forms -->
    <string name="title_label">Title</string>
    <string name="body_label">Body</string>

    <string name="create_first_note_label">Create First Note</string>
    <string name="trash_note_label">Nothing in Trash Can</string>
    <string name="delete_success_label">Successfully Delete Note</string>
    <string name="restore_success_label">Successfully Restore Note</string>
    <string name="edit_success_label">Successfully Edit Note</string>
    <string name="delete_selected_notes">Delete selected notes?</string>
    <string name="permanent_delete_selected_notes">Permanent delete selected notes?</string>
    <string name="restore_note">Restore Note?</string>
    <string name="note_not_found">Cannot Find Note</string>

    <!-- Setting -->
    <string name="lock_app">Lock App</string>
    <string name="use_pin">Use PIN</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="use_fingerprint">Enable Fingerprint</string>

    <!-- hint -->
    <string name="search_note">Search notes...</string>

    <!--    butttons -->
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="create_label">Create</string>

    <!--    menu -->
    <string name="menu_notes">Notes</string>
    <string name="menu_add_note">Add</string>
    <string name="menu_trash_can">Trash</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>
</resources>
