<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/noteListFragment"
        android:icon="@drawable/ic_menu_notes_black_24dp"
        android:title="@string/menu_notes"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_search"/>

    <item
        android:id="@+id/addNoteFragment"
        android:icon="@drawable/ic_add_note_black_24dp"
        android:title="@string/menu_add_note"/>

    <item
        android:id="@+id/trashCanFragment"
        android:icon="@drawable/ic_trash_can_black_24dp"
        android:title="@string/menu_trash_can"/>

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_setting"/>
</menu>