<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.notes.EditNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_note_title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/title_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_note_body_input_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/body_label"
            android:layout_marginTop="@dimen/formSpacing"
            app:layout_constraintTop_toBottomOf="@id/edit_note_title_input_layout"
            app:layout_constraintBottom_toTopOf="@id/edit_note_submit_btn"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note_body_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_note_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/edit_note_body_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/formSpacing"
            android:text="@string/save_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>